[package]
name = "kennylong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4"
hex = "0.4"